@@ -1,3 +1,10 @@
+2008-07-01  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Debugger.mdp, Makefile.am,
+	  MonoDevelop.Debugger/DebugTextMarker.cs: Implemented markers for
+	  breakpoint and current execution line.
+	* MonoDevelop.Debugger/DisasemblyView.cs: Use new current line marker.
+
 2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Debugger.addin.xml, MonoDevelop.Debugger.mdp,
